fixed div wrapping

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -108,7 +108,7 @@ html, body {
 
 .tag {
     font-weight: bold;
-    display: inline-block;
+    display: inline;
     vertical-align: bottom;    
     margin-right: 2px;
     padding-left: 5px;
@@ -122,7 +122,7 @@ html, body {
 .highlight {
     background-color: yellow;
     font-weight: bold;
-    display: inline-block;
+    display: inline;
     vertical-align: bottom;
 }
 
